<?xml version="1.0"?>
<package format="2">
  <name>gorgon_node</name>
  <version>0.0.0</version>
  <description>A ros node for interfacing with the
      robot open gorgon controller</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
