<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot</name>
  <version>0.0.0</version>
  <description>The phoenixbot package</description>

  <maintainer email="arc@todo.todo">arc</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>phoenixbot_2dnav</exec_depend>
  <exec_depend>phoenixbot_behavior_coordination</exec_depend>
  <exec_depend>phoenixbot_description</exec_depend>
  <exec_depend>phoenixbot_driver</exec_depend>
  <exec_depend>phoenixbot_gazebo</exec_depend>
  <exec_depend>phoenixbot_localization</exec_depend>
  <exec_depend>phoenixbot_launch</exec_depend>
  <exec_depend>phoenixbot_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
