<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot_behavior_coordination</name>
  <version>0.0.0</version>
  <description>The phoenixbot_behavior_coordination package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>phoenixbot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
