<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot_driver</name>
  <version>0.0.0</version>
  <description>The phoenixbot_driver package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>serial</exec_depend>

  <exec_depend>phoenixbot_description</exec_depend>
  <exec_depend>phoenixbot_msgs</exec_depend>
  <exec_depend>razor_imu_9dof</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export></export>
</package>
