<?xml version="1.0"?>
<package>
  <name>phoenixbot_gazebo</name>
  <version>0.0.0</version>
  <description>The phoenixbot_gazebo package</description>

  <maintainer email="arc@todo.todo">arc</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
