<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot_launch</name>
  <version>0.0.0</version>
  <description>The phoenixbot_launch package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>phoenixbot_2dnav</exec_depend>
  <exec_depend>phoenixbot_behavior_coordination</exec_depend>
  <exec_depend>phoenixbot_driver</exec_depend>
  <exec_depend>phoenixbot_gazebo</exec_depend>
  <exec_depend>phoenixbot_localization</exec_depend>
  <exec_depend>rviz</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
