<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot_localization</name>
  <version>0.0.0</version>
  <description>The phoenixbot_localization package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO I think this is overkill, trim it back -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>navigation</run_depend>
  <run_depend>phoenixbot_2dnav</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>slam_gmapping</run_depend>

  <export></export>
</package>
