<?xml version="1.0"?>
<package format="2">
  <name>phoenixbot_msgs</name>
  <version>0.0.0</version>
  <description>The phoenixbot_msgs package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
