<?xml version="1.0"?>
<package format="2">
  <name>wit_imu</name>
  <version>0.0.0</version>
  <description>The wit_imu package</description>

  <maintainer email="arc@arc.todo">arc</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export> </export>
</package>
